| Bug #44676 | 5.4 deprecation messages allege feature removal in lower version | ||
|---|---|---|---|
| Submitted: | 5 May 2009 19:17 | Modified: | 25 Jun 2009 1:37 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S3 (Non-critical) |
| Version: | 5.4.0 | OS: | Any |
| Assigned to: | Alexey Botchkov | Target Version: | 5.4+ |
| Triage: | Triaged: D4 (Minor) | ||
[6 May 2009 0:15]
Miguel Solorzano
Thank you for the bug report. Verified as described: iguel@hegel:~/mysql-5.4.0-beta-linux-x86_64-glibc23$ bin/mysql -uroot Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 1 Server version: 5.4.0-beta MySQL Community Server (GPL) Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql> use test Database changed mysql> create table t (i int) type innodb; Query OK, 0 rows affected, 1 warning (0.16 sec) mysql> show warnings\G *************************** 1. row *************************** Level: Warning Code: 1287 Message: The syntax 'TYPE=storage_engine' is deprecated and will be removed in MySQL 5.2. Please use 'ENGINE=storage_engine' instead 1 row in set (0.00 sec)
[8 May 2009 16:51]
Valeriy Kravchuk
Bug #44754 was marked as a duplicate of this one.
[23 Jun 2009 6:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/76871 2858 Alexey Botchkov 2009-06-23 Bug#44676 5.4 deprecation messages allege feature removal in lower version changed the deprecation border to 6.0 in this case per-file comments: mysql-test/r/backup.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/r/show_check.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/r/sp-error.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/r/sp.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/r/sp_trans.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/r/warnings.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed mysql-test/suite/rpl/r/rpl_sp.result Bug#44676 5.4 deprecation messages allege feature removal in lower version test result fixed sql/mysqld.cc Bug#44676 5.4 deprecation messages allege feature removal in lower version sql/set_var.cc Bug#44676 5.4 deprecation messages allege feature removal in lower version sql/sql_table.cc Bug#44676 5.4 deprecation messages allege feature removal in lower version sql/sql_yacc.yy Bug#44676 5.4 deprecation messages allege feature removal in lower version
[23 Jun 2009 9:15]
Alexey Botchkov
pushed into 5.1-performance tree
[23 Jun 2009 13:49]
Trudy Pelzer
Pushed into 5.4.2.
[25 Jun 2009 1:37]
Paul DuBois
Noted in 5.4.2 changelog. Some deprecation warning messages indicated feature removal in MySQL 5.2 rather than MySQL 6.0.
[16 Sep 2009 6:45]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090916063112-8hjmu6wkxfx5qxf4) (version source revid:guilhem@mysql.com-20090708213845-36vjraclcpz7mwlq) (merge vers: 5.4.4-alpha) (pib:11)

Description: 5.4.0 has error messages that refer to an incorrect version: mysql> create table t (i int) type innodb; Query OK, 0 rows affected, 1 warning (0.04 sec) mysql> show warnings; +---------+------+-----------------------------------------------------------------------------------------------------------------------------+ | Level | Code | Message | +---------+------+-----------------------------------------------------------------------------------------------------------------------------+ | Warning | 1287 | The syntax 'TYPE=storage_engine' is deprecated and will be removed in MySQL 5.2. Please use 'ENGINE=storage_engine' instead | +---------+------+-----------------------------------------------------------------------------------------------------------------------------+ 1 row in set (0.00 sec) This is confusing because it appears that a feature removal will occur in a lower-numbered release. The same fix as for Bug#40177 should be applied to 5.4. How to repeat: See above.