Bug#44676      5.4 deprecation messages allege feature removal in lower version     changed the deprecation border to 6.0 in this case

per-file comments:
  mysql-test/r/backup.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/r/show_check.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/r/sp-error.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/r/sp.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/r/sp_trans.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/r/warnings.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  mysql-test/suite/rpl/r/rpl_sp.result
    Bug#44676      5.4 deprecation messages allege feature removal in lower version
    test result fixed
  sql/mysqld.cc
Bug#44676      5.4 deprecation messages allege feature removal in lower version
  sql/set_var.cc
Bug#44676      5.4 deprecation messages allege feature removal in lower version
  sql/sql_table.cc
Bug#44676      5.4 deprecation messages allege feature removal in lower version
  sql/sql_yacc.yy
Bug#44676      5.4 deprecation messages allege feature removal in lower version